--- a/app/src/main/res/layout/fragment_new_client.xml
+++ b/app/src/main/res/layout/fragment_new_client.xml
@@ -1,83 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/btn_cancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="отмена"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btn_save"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="сохранить"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/ed_client_name"
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="имя"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_cancel" />
+        android:layout_margin="@dimen/small_dp_size"
+        app:cardCornerRadius="@dimen/small_dp_size"
+        android:id="@+id/item_client_card">
 
-    <EditText
-        android:id="@+id/ed_client_phone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="телефон"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ed_client_name" />
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/btn_add_simple_size"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ed_client_phone">
-
-        <androidx.appcompat.widget.LinearLayoutCompat
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/ed_client_email"
+            <!-- Media -->
+            <ImageView
+                android:id="@+id/fr_new_client_photo"
+                android:layout_width="match_parent"
+                android:layout_height="194dp"
+                android:contentDescription="@string/client_photo"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_baseline_add_a_photo_24"/>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="e-mail" />
+                android:orientation="vertical"
+                android:padding="@dimen/medium_dp_size">
 
-        </androidx.appcompat.widget.LinearLayoutCompat>
+                <!-- Title, secondary and supporting text -->
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/fr_new_client_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/client_name"
+                    android:textAppearance="?attr/textAppearanceHeadline6" />
 
-    </ScrollView>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/fr_new_client_phone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/client_phone_number"
 
-    <Button
-        android:id="@+id/btn_add_simple_size"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
-        android:text="добавить простой размер"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/btn_add_difficult_size"
-        app:layout_constraintStart_toStartOf="parent" />
+                    android:textAppearance="?attr/textAppearanceBody2"
+                    android:textColor="?android:attr/textColorSecondary" />
 
-    <Button
-        android:id="@+id/btn_add_difficult_size"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:text="добавить сложный размер"
-        android:textSize="10sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/btn_add_simple_size" />
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/fr_new_client_balance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/small_dp_size"
+                    android:hint="@string/client_balance"
+                    android:textAppearance="?attr/textAppearanceBody2"
+                    android:textColor="?android:attr/textColorSecondary" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/small_dp_size"
+                android:orientation="horizontal">
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/fr_new_client_btn_save"
+                    style="?attr/borderlessButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/small_dp_size"
+                    android:text="@string/save_btn" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/fr_new_client_btn_cancel"
+                    style="?attr/borderlessButtonStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/cancel_btn" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+</androidx.appcompat.widget.LinearLayoutCompat>
