--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,5 @@
     <dimen name="text_margin">16dp</dimen>
     <dimen name="global_margin">32dp</dimen>
     <dimen name="small_dp_size">8dp</dimen>
-    <dimen name="medium_size">16dp</dimen>
+    <dimen name="medium_dp_size">16dp</dimen>
 </resources>
