--- a/app/src/main/res/navigation/client_list_navigation.xml
+++ b/app/src/main/res/navigation/client_list_navigation.xml
@@ -7,7 +7,7 @@
     <fragment
         android:id="@+id/clientListFragment"
         android:name="com.example.seamstress.ui.fragments.clients.listFragment.ClientListFragment"
-        android:label="All Clients">
+        android:label="Список клиентов">
         <action
             android:id="@+id/action_clientListFragment_to_clientFragment"
             app:destination="@id/clientFragment" />
@@ -18,18 +18,21 @@
     <fragment
         android:id="@+id/clientFragment"
         android:name="com.example.seamstress.ui.fragments.clients.mainFragment.ClientFragment"
-        android:label="Client">
+        android:label="Клиент">
         <action
             android:id="@+id/action_clientFragment_to_clientListFragment"
             app:destination="@id/clientListFragment" />
         <argument
             android:name="clientEntityId"
             app:argType="long" />
+        <action
+            android:id="@+id/action_clientFragment_to_updateClientFragment"
+            app:destination="@id/updateClientFragment" />
     </fragment>
     <fragment
         android:id="@+id/newClientFragment"
         android:name="com.example.seamstress.ui.fragments.clients.add.NewClientFragment"
-        android:label="NewClientFragment">
+        android:label="Новый клиент">
         <action
             android:id="@+id/action_newClientFragment_to_clientListFragment"
             app:destination="@id/clientListFragment" />
@@ -37,5 +40,19 @@
             android:id="@+id/action_newClientFragment_to_clientFragment"
             app:destination="@id/clientFragment"
             app:popUpTo="@id/clientListFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/updateClientFragment"
+        android:name="com.example.seamstress.ui.fragments.clients.update.UpdateClientFragment"
+        android:label="Редактирование">
+        <argument
+            android:name="clientEntityId"
+            app:argType="long" />
+        <action
+            android:id="@+id/action_updateClientFragment_to_clientFragment"
+            app:destination="@id/clientFragment" />
+        <action
+            android:id="@+id/action_updateClientFragment_to_clientListFragment"
+            app:destination="@id/clientListFragment" />
     </fragment>
 </navigation>
