добавил FAB редактироания во фрагмент клиента

--- a/app/src/main/res/layout/fragment_clients_list.xml
+++ b/app/src/main/res/layout/fragment_clients_list.xml
@@ -17,7 +17,7 @@
         android:id="@+id/floatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/small_dp_size"
+        android:layout_margin="@dimen/medium_dp_size"
         android:contentDescription="@string/add_client_btn"
         android:clickable="true"
         android:focusable="true"
