--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,5 +12,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:defaultNavHost="true"
-        app:navGraph="@navigation/client_list_navigation" />
+        app:navGraph="@navigation/navigation" />
 </androidx.appcompat.widget.LinearLayoutCompat>
