--- a/app/src/main/res/layout/fragment_customer_card.xml
+++ b/app/src/main/res/layout/fragment_customer_card.xml
@@ -6,25 +6,25 @@
     android:orientation="vertical">
 
     <include
-        android:id="@+id/item_client"
-        layout="@layout/item_client"
+        android:id="@+id/item_customer"
+        layout="@layout/item_customer"
         app:layout_constraintEnd_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_client_clothes"
+        android:id="@+id/recycler_customer_clothes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/small_dp_size"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_client" />
+        app:layout_constraintTop_toBottomOf="@+id/item_customer" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/medium_dp_size"
-        android:contentDescription="@string/edit_client_btn"
+        android:contentDescription="@string/edit_customer_btn"
         android:clickable="true"
         android:focusable="true"
         app:layout_constraintBottom_toBottomOf="parent"
