--- a/app/src/main/res/layout/fragment_customers_list.xml
+++ b/app/src/main/res/layout/fragment_customers_list.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/fr_client_list_recycler"
+        android:id="@+id/fr_customer_list_recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/medium_dp_size"
-        android:contentDescription="@string/add_client_btn"
+        android:contentDescription="@string/add_customer_btn"
         android:clickable="true"
         android:focusable="true"
         app:layout_constraintBottom_toBottomOf="parent"
