--- a/app/src/main/res/layout/item_metrics_list.xml
+++ b/app/src/main/res/layout/item_metrics_list.xml
@@ -12,19 +12,18 @@
 
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textField"
+        android:id="@+id/item_metric_list_text_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Рост"
         app:endIconMode="clear_text"
         app:helperTextEnabled="true"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/item"
+            android:id="@+id/item_metric_list_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="number" />
+            android:inputType="numberDecimal" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
