реализовал горизонтальный ресайклер для готовых замеров во фрагменте клиента

--- a/app/src/main/res/layout/fragment_card_customer.xml
+++ b/app/src/main/res/layout/fragment_card_customer.xml
@@ -11,22 +11,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-<!--    -->
-<!--    <androidx.recyclerview.widget.RecyclerView-->
-<!--        android:id="@+id/recycler_customer_clothes"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_margin="@dimen/small_dp_size"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/item_customer" />-->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/fr_card_customer_recycler_measurements"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/small_dp_size"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/item_customer" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/medium_dp_size"
-        android:contentDescription="@string/edit_customer_btn"
         android:clickable="true"
+        android:contentDescription="@string/edit_customer_btn"
         android:focusable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
