--- a/app/src/main/res/layout/item_list_measurement.xml
+++ b/app/src/main/res/layout/item_list_measurement.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/item_customer_list_card"
+    android:id="@+id/item_list_measurement_card"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/small_dp_size"
@@ -10,37 +10,38 @@
     android:focusable="true"
     app:cardCornerRadius="@dimen/small_dp_size">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:orientation="vertical"
         android:padding="@dimen/medium_dp_size">
 
         <TextView
-            android:id="@+id/item_customer_list_name"
+            android:id="@+id/item_list_measurement_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="03.12.2022"
-            android:textAppearance="?attr/textAppearanceHeadline6" />
+            android:textAppearance="?attr/textAppearanceHeadline6"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/item_customer_list_phone"
+            android:id="@+id/item_list_measurement_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/small_dp_size"
-            android:text="самое нижнее белье"
             android:textAppearance="?attr/textAppearanceBody1"
-            android:textColor="?android:attr/textColorSecondary" />
+            android:textColor="?android:attr/textColorSecondary"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/item_customer_list_balance"
+            android:id="@+id/item_list_measurement_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/small_dp_size"
-            android:text="трусики для зайчиков"
             android:textAppearance="?attr/textAppearanceBody2"
-            android:textColor="?android:attr/textColorSecondary" />
+            android:textColor="?android:attr/textColorSecondary"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </com.google.android.material.card.MaterialCardView>
