--- a/app/src/main/res/layout/fragment_card_measurement.xml
+++ b/app/src/main/res/layout/fragment_card_measurement.xml
@@ -27,18 +27,22 @@
                 android:padding="@dimen/medium_dp_size">
 
                 <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/fr_card_measurement_date"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?attr/textAppearanceHeadline6" />
+
+                <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/fr_card_measurement_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="название замера"
-                    android:textAppearance="?attr/textAppearanceHeadline6" />
+                    android:textAppearance="?attr/textAppearanceHeadline5" />
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/fr_card_measurement_type"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/small_dp_size"
-                    android:hint="какой-то тип"
                     android:textAppearance="?attr/textAppearanceBody2"
                     android:textColor="?android:attr/textColorSecondary" />
             </LinearLayout>
